# COP3530_Edugator

./: CMakeLists.txt
1. Shorts/modset/: CMakeLists.txt
1. Shorts/sortable/: CMakeLists.txt
1. Shorts/stack_flip/: CMakeLists.txt
10. Dynamic Programming/exploring_swamp/: CMakeLists.txt
10. Dynamic Programming/exploring_swamp/src/: cop3530_9_1.h
2. C++/are_permutations/: CMakeLists.txt
2. C++/are_permutations/src/: cop3530_1_2.h
2. C++/suffix_count/: CMakeLists.txt
2. C++/suffix_count/src/: suffix_count.h
3. Lists Stacks and Queue/image_encryptor/: CMakeLists.txt
3. Lists Stacks and Queue/image_encryptor/src/: quiz3.h
3. Lists Stacks and Queue/image_encryptor/test/: test.cpp
3. Lists Stacks and Queue/interquartile_range/: CMakeLists.txt
3. Lists Stacks and Queue/interquartile_range/src/: interquartile_range.h
4. Trees/sum_of_level/: CMakeLists.txt
5. Heaps/extract_max/: CMakeLists.txt
6. Sets and Maps/degree_of_string/: CMakeLists.txt
6. Sets and Maps/degree_of_string/src/: cop3530_5_2.h
6. Sets and Maps/find_digits/: CMakeLists.txt
6. Sets and Maps/four_digits/: CMakeLists.txt
7. Graphs/hidden_gator/: CMakeLists.txt
7. Graphs/not_so_simple_graph/: CMakeLists.txt
7. Graphs/valid_path/: CMakeLists.txt
8. Graph Algorithms/andrewfied_dijkstra/: CMakeLists.txt
8. Graph Algorithms/maze_escape/: CMakeLists.txt
8. Graph Algorithms/maze_escape/src/: maze_escape.h
